--- a/css/docs.css
+++ b/css/docs.css
@@ -1,18 +1,10 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
-
 .box {
   margin-bottom: 26px;
   padding-bottom: 21px;
 }
 
 .colors {
-  font-size: 12px;
+  font-size: 13px;
 }
 .colors .color-box {
   display: block;
@@ -54,4 +46,8 @@
 
 .navbar-styles .navbar {
   border: 1px solid #dddddd;
+}
+
+.bs-example .btn-toolbar {
+  margin-top: 20px;
 }
