--- a/css/gengo-bootstrap-theme.css
+++ b/css/gengo-bootstrap-theme.css
@@ -1,11 +1,3 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
-
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -2928,7 +2920,7 @@ input[type="month"].input-sm,
 .input-group-sm > input[type="month"].form-control,
 .input-group-sm > input[type="month"].input-group-addon,
 .input-group-sm > .input-group-btn > input[type="month"].btn {
-  line-height: 32px;
+  line-height: 33px;
 }
 input[type="date"].input-lg, .input-group-lg > input[type="date"].form-control,
 .input-group-lg > input[type="date"].input-group-addon,
@@ -2945,7 +2937,7 @@ input[type="month"].input-lg,
 .input-group-lg > input[type="month"].form-control,
 .input-group-lg > input[type="month"].input-group-addon,
 .input-group-lg > .input-group-btn > input[type="month"].btn {
-  line-height: 50px;
+  line-height: 48px;
 }
 
 .form-group {
@@ -3013,9 +3005,9 @@ input[type="checkbox"],
 .input-sm, .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  height: 32px;
+  height: 33px;
   padding: 6px 12px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -3023,8 +3015,8 @@ input[type="checkbox"],
 select.input-sm, .input-group-sm > select.form-control,
 .input-group-sm > select.input-group-addon,
 .input-group-sm > .input-group-btn > select.btn {
-  height: 32px;
-  line-height: 32px;
+  height: 33px;
+  line-height: 33px;
 }
 
 textarea.input-sm, .input-group-sm > textarea.form-control,
@@ -3040,9 +3032,9 @@ select[multiple].input-sm,
 .input-lg, .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  height: 50px;
+  height: 48px;
   padding: 12px 18px;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.33;
   border-radius: 3px;
 }
@@ -3050,8 +3042,8 @@ select[multiple].input-sm,
 select.input-lg, .input-group-lg > select.form-control,
 .input-group-lg > select.input-group-addon,
 .input-group-lg > .input-group-btn > select.btn {
-  height: 50px;
-  line-height: 50px;
+  height: 48px;
+  line-height: 48px;
 }
 
 textarea.input-lg, .input-group-lg > textarea.form-control,
@@ -3086,17 +3078,17 @@ select[multiple].input-lg,
 .input-lg + .form-control-feedback, .input-group-lg > .form-control + .form-control-feedback,
 .input-group-lg > .input-group-addon + .form-control-feedback,
 .input-group-lg > .input-group-btn > .btn + .form-control-feedback {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
 }
 
 .input-sm + .form-control-feedback, .input-group-sm > .form-control + .form-control-feedback,
 .input-group-sm > .input-group-addon + .form-control-feedback,
 .input-group-sm > .input-group-btn > .btn + .form-control-feedback {
-  width: 32px;
-  height: 32px;
-  line-height: 32px;
+  width: 33px;
+  height: 33px;
+  line-height: 33px;
 }
 
 .has-success .help-block,
@@ -3480,21 +3472,21 @@ select[multiple].input-lg,
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 12px 18px;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.33;
   border-radius: 3px;
 }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 6px 12px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
 
 .btn-xs, .btn-group-xs > .btn {
   padding: 3px 6px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -3654,7 +3646,7 @@ tbody.collapse.in {
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   color: #e3e1df;
 }
@@ -3949,14 +3941,14 @@ tbody.collapse.in {
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .input-group-addon.btn {
   padding: 6px 12px;
-  font-size: 12px;
+  font-size: 13px;
   border-radius: 3px;
 }
 .input-group-addon.input-lg,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .input-group-addon.btn {
   padding: 12px 18px;
-  font-size: 18px;
+  font-size: 16px;
   border-radius: 3px;
 }
 .input-group-addon input[type="radio"],
@@ -4036,7 +4028,7 @@ tbody.collapse.in {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 6px 16px;
 }
 .nav > li > a:hover, .nav > li > a:focus {
   text-decoration: none;
@@ -4082,8 +4074,8 @@ tbody.collapse.in {
   border-color: white white #dddddd;
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  color: #a49d97;
-  background-color: #f4f4f4;
+  color: #4d4843;
+  background-color: white;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -4159,7 +4151,7 @@ tbody.collapse.in {
   .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus,
   .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #f4f4f4;
+    border-bottom-color: white;
   }
 }
 
@@ -4315,7 +4307,7 @@ tbody.collapse.in {
 .navbar-brand {
   float: left;
   padding: 13.5px 18px;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 21px;
   height: 48px;
 }
@@ -4462,8 +4454,8 @@ tbody.collapse.in {
   margin-bottom: 6.5px;
 }
 .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 7.5px;
+  margin-bottom: 7.5px;
 }
 .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
   margin-top: 13px;
@@ -4650,10 +4642,10 @@ tbody.collapse.in {
 }
 
 .breadcrumb {
-  padding: 8px 15px;
+  padding: 4px 0;
   margin-bottom: 21px;
   list-style: none;
-  background-color: whitesmoke;
+  background-color: white;
   border-radius: 3px;
 }
 .breadcrumb > li {
@@ -4665,7 +4657,7 @@ tbody.collapse.in {
   color: #cccccc;
 }
 .breadcrumb > .active {
-  color: #e3e1df;
+  color: #4c4643;
 }
 
 .pagination {
@@ -4732,7 +4724,7 @@ tbody.collapse.in {
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 12px 18px;
-  font-size: 18px;
+  font-size: 16px;
 }
 .pagination-lg > li:first-child > a,
 .pagination-lg > li:first-child > span {
@@ -4748,7 +4740,7 @@ tbody.collapse.in {
 .pagination-sm > li > a,
 .pagination-sm > li > span {
   padding: 6px 12px;
-  font-size: 12px;
+  font-size: 13px;
 }
 .pagination-sm > li:first-child > a,
 .pagination-sm > li:first-child > span {
@@ -4879,7 +4871,7 @@ a.label:hover, a.label:focus {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: bold;
   color: white;
   line-height: 1;
@@ -5096,7 +5088,7 @@ a.thumbnail.active {
   float: left;
   width: 0%;
   height: 100%;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 21px;
   color: white;
   text-align: center;
@@ -5878,7 +5870,7 @@ button.close {
   z-index: 1030;
   display: block;
   visibility: visible;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
