--- a/css/gengo.css
+++ b/css/gengo.css
@@ -1,11 +1,3 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
-
 ul,
 ol {
   padding-left: 32px;
@@ -377,6 +369,29 @@ a:hover,
   color: #cc3217;
 }
 
+.btn-group > .btn {
+  line-height: 17px;
+}
+
+.btn-group-xs > .btn {
+  padding-right: 8px;
+  padding-left: 8px;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.btn-group-sm > .btn {
+  font-size: 14px;
+  line-height: 17px;
+  padding: 6px 12px;
+}
+
+.btn-group-lg > .btn {
+  font-size: 16px;
+  line-height: 19px;
+  padding: 10px 16px;
+}
+
 @font-face {
   font-weight: normal;
   font-style: normal;
@@ -582,6 +597,10 @@ a:hover,
   content: "\21";
 }
 
+.nav-pills.nav-stacked > li > a {
+  display: inline-block;
+}
+
 .radio, .checkbox {
   margin-top: 14px;
   margin-bottom: 14px;
@@ -608,6 +627,16 @@ a:hover,
 
 .admin .form-control:focus {
   border-color: #4d4843;
+}
+
+.nav .dropdown.open > a {
+  border-color: transparent;
+}
+
+.nav .dropdown > a:hover,
+.nav .dropdown > a:focus,
+.nav .dropdown > a:active {
+  border-bottom-color: #dddddd;
 }
 
 .modal-content {
@@ -671,6 +700,10 @@ a:hover,
 
 .rejected .icon-status {
   color: #ea5e47;
+}
+
+.breadcrumb {
+  margin-bottom: 0;
 }
 
 .navbar {
