--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -14,6 +14,7 @@
 @import "modals";
 @import "status";
 @import "breadcrumbs";
+@import "pagination";
 
 // customer & default
 $brand-color: $brand-customer;
