--- a/html/_layouts/default.html
+++ b/html/_layouts/default.html
@@ -1,3 +1,14 @@
+---
+navigation:
+- text: Style
+  url: style.html
+- text: Voice
+  url: #
+- text: Components
+  url: components.html
+- text: Layout
+  url: grid.html
+---
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +23,43 @@
   <link rel="stylesheet" href="assets/css/docs.css">
 </head>
 <body>
+  <header class="navbar navbar-static-top ge-navbar" role="banner">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".ge-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="./index.html"></a>
+      </div>
+      <nav class="collapse navbar-collapse ge-navbar-collapse" role="navigation">
+        <ul class="nav navbar-nav">
+          {% for link in page.navigation %}
+          <li class="{% if page.name == link.url %}active{% endif %}">
+            <a href="{{link.url}}">{{link.text}}</a>
+          </li>
+          {% endfor %}
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Examples <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a class="" href="http://gengo.github.io/html-prototypes/workbench_twbs3/">Translator workbench</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Section <b class="caret"></b></a>
+            <ul class="change-brand dropdown-menu">
+              <li><a class="customer" href="#">Customer</a></li>
+              <li><a class="translator" href="#">Translator</a></li>
+              <li><a class="developer" href="#">Developer</a></li>
+              <li><a class="admin" href="#">Admin</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   {{ content }}
   <!-- JS -->
   <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
