--- a/liquid/_includes/components/navbar.html
+++ b/liquid/_includes/components/navbar.html
@@ -36,10 +36,45 @@
         </nav>
       </div>
     </header>
+{% highlight html %}
+<header class="navbar navbar-static-top" role="banner">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="#">Orders</a>
+        </li>
+        <li class="active">
+          <a href="#">Glossaries</a>
+        </li>
+        <li>
+          <a href="#">Translators</a>
+        </li>
+        <li>
+          <a href="#">String</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+{% endhighlight %}
+
   </div>
 
-  <p>Add .navbar-fixed-top and include a .container or .container-fluid to center and pad navbar content. Create a full-width navbar that scrolls away with the page by adding .navbar-static-top and include a .container or .container-fluid to center and pad navbar content.</p>
-  <p>Unlike the .navbar-fixed-* classes, you do not need to change any padding on the body.</p>
+  <p>Add <code>.navbar-fixed-top</code> and include a <code>.container</code> or <code>.container-fluid</code> to center and pad navbar content. Create a full-width navbar that scrolls away with the page by adding .navbar-static-top and include a .container or <code>.container-fluid</code> to center and pad navbar content.</p>
+  <p>Unlike the <code>.navbar-fixed-*</code> classes, you do not need to change any padding on the body.</p>
 
   <h2>Forms</h2>
   <div class="navbar-styles">
@@ -63,6 +98,28 @@
         </nav>
       </div>
     </header>
+{% highlight html %}
+<header class="navbar navbar-static-top" role="banner">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control form-search" placeholder="Search">
+        </div>
+      </form>
+    </nav>
+  </div>
+</header>
+{% endhighlight %}
   </div>
 
   <h2>Buttons</h2>
@@ -85,8 +142,27 @@
         </nav>
       </div>
     </header>
+{% highlight html %}
+<header class="navbar navbar-static-top" role="banner">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <div class="navbar-right">
+        <button class="btn btn-primary">Submit</button>
+      </div>
+    </nav>
   </div>
-
+</header>
+{% endhighlight %}
+  </div>
   <h2>Text</h2>
   <div class="navbar-styles">
     <header class="navbar navbar-static-top" role="banner">
@@ -107,6 +183,26 @@
         </nav>
       </div>
     </header>
+{% highlight html %}
+<header class="navbar navbar-static-top" role="banner">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <div class="navbar-right">
+        <p class="navbar-text">Logged in as User-123</p>
+      </div>
+    </nav>
+  </div>
+</header>
+{% endhighlight %}
   </div>
 
 </div>
