--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -6,6 +6,7 @@
 .box {
   margin-bottom: 26px;
   padding-bottom: 21px;
+  padding-left:33px;
 }
 
 .colors {
@@ -74,4 +75,41 @@
 
   }
 }
+// ------ header -------------------------------
+.ge-navbar-collapse{
+  .navbar-nav{
+    padding-left:15px;
+  }
+}
+
+.ge-nav{
+  padding-top:16px;
+  padding-left:10px;
+
+  .nav > li > a{
+    padding-right:0;
+  }
+}
+
+.ge-content{
+  padding:{
+    top:13px;
+    // right:13px;
+    // left:23px;
+  }
+  h1[id]{
+    padding-top:30px;
+  }
+
+  hr{
+    margin-top:16px;
+    margin-bottom: 0;
+  }
+  h2{
+    margin-top:25px;
+    margin-bottom:20px;
+  }
+}
+
+
 
